--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install compiler
         id: install_cc
-        uses: ./
+        uses: rlalik/setup-cpp-compiler@v1.0
         with:
           compiler: ${{ matrix.compiler }}
       - name: Check compiler
