Update windows gh actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install compiler
         id: install_cc
-        uses: ./
+        uses: rlalik/setup-cpp-compiler@master
         with:
           compiler: ${{ matrix.compiler }}
       - name: Check compiler
